--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -150,12 +150,30 @@
     </template>
     <script>
         (function () {
-            function getJuicyList(e) {
+            function isTileList(element, selectors) {
+                if (!element || !element.tagName) {
+                    return false;
+                }
+
+                var name = element.tagName.toLowerCase();
+
+                for (var i = 0; i < selectors.length; i++) {
+                    if (selectors[i] == name) {
+                        return true;
+                    }
+                }
+
+                return false;
+            }
+
+            function getJuicyList(event, selectors) {
                 var list = null;
 
-                for (var i = 1; i < e.path.length; i++) {
-                    if (e.path[i].tagName == "JUICY-TILE-LIST") {
-                        list = e.path[i];
+                for (var i = 1; i < event.path.length; i++) {
+                    var el = event.path[i];
+
+                    if (isTileList(el, selectors)) {
+                        list = el;
                         break;
                     }
                 }
@@ -167,8 +185,8 @@
                 return list.host || list;
             };
 
-            function getJuicyTile(e) {
-                var list = getJuicyList(e);
+            function getJuicyTile(event, listSelectors) {
+                var list = getJuicyList(event, listSelectors);
 
                 if (list == null) {
                     return null;
@@ -176,12 +194,15 @@
 
                 var target = null;
 
-                for (var i = 0; i < e.path.length; i++) {
-                    target = e.path[i];
+                for (var i = 0; i < event.path.length; i++) {
+                    target = event.path[i];
 
                     if (target && target.classList && target.hasAttribute &&
                         (target.classList.contains("juicy-tile") || target.classList.contains("containerBackground") || target.hasAttribute("juicytile"))) {
                         break;
+                    } else if (isTileList(target, listSelectors)) {
+                        // Reached the top level of tile list. The selected tile is outside of current tile list.
+                        return null;
                     }
                 }
 
@@ -195,7 +216,15 @@
                     id = target.getAttribute("juicytile");
                 }
 
-                return list.tiles[id];
+                // Selecting the top group if a tile packed inside.
+                var setup = getSetupItem(list.setup, id);
+
+                while (setup.container.container) {
+                    setup = setup.container;
+                }
+
+                // Get Shadow DOM element for this tile.id.
+                return list.tiles[setup.id];
             }
 
             function getSetupItem(setup, id) {
@@ -232,8 +261,8 @@
                                 { name: "6", value: "60%" }, { name: "7", value: "70%" }, { name: "8", value: "80%" }, { name: "9", value: "90%" }, { name: "10", value: "100%" }]
                     },
                     visible: { type: Boolean, value: null, notify: true },
-                    tileListSelector: { type: String, value: "juicy-tile-list, juicy-tile-grid" },
-                    tileLists: { type: Array, value: [] },
+                    listSelectors: { type: Array, value: ["juicy-tile-list", "juicy-tile-grid"] },
+                    lists: { type: Array, value: [] },
                     selectedTiles: { type: Array, value: [] },
                     selectedList: { type: Object, value: null, observer: "selectedListChanged" },
                     selectedListItems:  { type: Array, value: [] },
@@ -243,9 +272,9 @@
                 attached: function () {
                     this.set("mediaScreen", this.mediaScreenRanges[this.mediaScreenRanges.length - 1]);
 
-                    var lists = Array.prototype.slice.call(document.querySelectorAll(this.tileListSelector));
+                    var lists = Array.prototype.slice.call(document.querySelectorAll(this.listSelectors.join(", ")));
 
-                    this.set("tileLists", lists);
+                    this.set("lists", lists);
                     this.attachEventListeners();
                     this.resetSelection();
                 },
@@ -254,7 +283,7 @@
                 },
                 attachEventListeners: function () {
                     this.onListMouseover = function (e) {
-                        var tile = getJuicyTile(e);
+                        var tile = getJuicyTile(e, this.listSelectors);
 
                         if (tile) {
                             this.$.highlightTileRollover.show(tile);
@@ -268,13 +297,13 @@
                         e.stopImmediatePropagation();
                         e.preventDefault();
 
-                        var list = getJuicyList(e);
-                        var tile = getJuicyTile(e);
+                        var list = getJuicyList(e, this.listSelectors);
+                        var tile = getJuicyTile(e, this.listSelectors);
 
                         this.toggleSelectedTile(e, list, tile);
                     }.bind(this);
 
-                    this.tileLists.forEach(function (list) {
+                    this.lists.forEach(function (list) {
                         var shadow = list.shadowContainer;
 
                         list.addEventListener("mousemove", this.onListMouseover);
@@ -285,7 +314,7 @@
                     }.bind(this));
                 },
                 detachEventListeners: function () {
-                    this.tileLists.forEach(function (list) {
+                    this.lists.forEach(function (list) {
                         var shadow = list.shadowContainer;
 
                         list.removeEventListener("mousemove", this.onListMouseover);
@@ -461,7 +490,7 @@
                     this.toggleSelectedTile(e, this.selectedList, tile);
                 },
                 resetSelection: function () {
-                    this.set("selectedList", this.tileLists[0]);
+                    this.set("selectedList", this.lists[0]);
 
                     if (this.selectedTiles.length) {
                         this.set("selectedTiles", []);
