--- a/simple.html
+++ b/simple.html
@@ -36,7 +36,7 @@
         }
 
         juicy-tile-list > * {
-            box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
+            /*box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);*/
             padding: 2px;
         }
 
