--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -467,18 +467,48 @@
                     this.selectedList.refresh();
                 },
                 moveUp: function (e) {
-                    this.selectedTiles.forEach(function (tile) {
-                        var setup = getSetupItem(this.selectedList.setup, tile.id);
+                    var setups = this.selectedTiles.map(function (tile) {
+                        return getSetupItem(this.selectedList.setup, tile.id);
+                    }.bind(this));
 
+                    setups.sort(function (a, b) {
+                        a = a.priority;
+                        b = b.priority;
+
+                        if (a > b) {
+                            return -1;
+                        } else if (b > a) {
+                            return 1;
+                        } else {
+                            return 0;
+                        }
+                    });
+
+                    setups.forEach(function (setup) {
                         this.selectedList.reprioritizeItem(setup, true);
                     }.bind(this));
 
                     this.selectedList.refresh();
                 },
                 moveDown: function (e) {
-                    this.selectedTiles.forEach(function (tile) {
-                        var setup = getSetupItem(this.selectedList.setup, tile.id);
+                    var setups = this.selectedTiles.map(function (tile) {
+                        return getSetupItem(this.selectedList.setup, tile.id);
+                    }.bind(this));
 
+                    setups.sort(function (a, b) {
+                        a = a.priority;
+                        b = b.priority;
+
+                        if (a > b) {
+                            return 1;
+                        } else if (b > a) {
+                            return -1;
+                        } else {
+                            return 0;
+                        }
+                    });
+
+                    setups.forEach(function (setup) {
                         this.selectedList.reprioritizeItem(setup, false);
                     }.bind(this));
 
