Fix hide/show tile height issue
https://github.com/Juicy/juicy-tile-editor/issues/98

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -464,7 +464,7 @@
                         setup.hidden = !this.visible;
                     }.bind(this));
 
-                    this.selectedList.refresh();
+                    this.selectedList.refresh(true);
                 },
                 moveUp: function (e) {
                     var setups = this.selectedTiles.map(function (tile) {
