--- a/simple.html
+++ b/simple.html
@@ -133,6 +133,7 @@
                             width: "100%",
                             widthFlexible: true,
                             id: "group_1",
+                            name: "ID",
                             hidden: false,
                             heightDynamic: true,
                             precalculateHeight: 1,
@@ -143,22 +144,22 @@
                                 { width: "875px", widthFlexible: true, id: 1, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.8 }
                             ]
                         },
-                        { width: "100%", widthFlexible: true, id: 2, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.7 },
-                        { width: "100%", widthFlexible: true, id: 3, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.6 },
-                        { width: "100%", widthFlexible: true, id: 4, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.5 },
-                        { width: "100%", widthFlexible: true, id: 5, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.4 },
-                        { width: "100%", widthFlexible: true, id: 6, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.3 },
-                        { width: "100%", widthFlexible: true, id: 7, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.2 },
-                        { width: "100%", widthFlexible: true, id: 8, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.1 },
-                        { width: "100%", widthFlexible: true, id: 9, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.09 }
+                        { width: "100%", widthFlexible: true, id: 2, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.7 },
+                        { width: "100%", widthFlexible: true, id: 3, name: "Description", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.6 },
+                        { width: "100%", widthFlexible: true, id: 4, name: "Buttons", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.5 },
+                        { width: "100%", widthFlexible: true, id: 5, name: "Suppliers", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.4 },
+                        { width: "100%", widthFlexible: true, id: 6, name: "Image label", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.3 },
+                        { width: "100%", widthFlexible: true, id: 7, name: "Image", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.2 },
+                        { width: "100%", widthFlexible: true, id: 8, name: "Barcode value", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.1 },
+                        { width: "100%", widthFlexible: true, id: 9, name: "Barcode image", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.09 }
                     ]
                 },
                 nestedSetup: {
                     gutter: 10,
                     width: 1100,
                     items: [
-                        { width: "100%", widthFlexible: true, id: 0, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 1 },
-                        { width: "100%", widthFlexible: true, id: 1, hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.9 }
+                        { width: "100%", widthFlexible: true, id: 0, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 1 },
+                        { width: "100%", widthFlexible: true, id: 1, name: "Price", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.9 }
                     ]
                 }
             };
