Remove nested juicy-tile-list shadow

--- a/simple.html
+++ b/simple.html
@@ -28,6 +28,10 @@
             box-shadow: inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
         }
 
+        juicy-tile-list juicy-tile-list {
+            box-shadow: none;
+        }
+
         juicy-tile-list#st1 {
             width: 100%;
             min-height: 600px;
