Adjust simple editor styles
https://github.com/Juicy/juicy-tile-editor/issues/98

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -45,16 +45,14 @@
 
             .editor-form button.btn-radio {
                 background-color: #F0F0F0;
-                color: #CCCCCC;
             }
 
             .editor-form button.btn-radio:hover {
-                color: black;
+                background-color: #E0E0E0;
             }
 
             .editor-form button.btn-radio.active {
-                color: black;
-                background-color: #CCCCCC;
+                background-color: #BBBBBB;
             }
 
             .editor-form button.btn[disabled],
