--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -100,7 +100,7 @@
         <div class="editor-form">
             <div class="editor-form-section">
                 <button type="button" class="btn" on-click="saveSetup" disabled$="{{!hasChanges}}">Save</button>
-                <button type="button" class="btn" on-click="clearSetup">Clear</button>
+                <button type="button" class="btn" on-click="resetSetup">Reset</button>
             </div>
             <div class="editor-form-section">
                 <template is="dom-repeat" items="{{mediaScreenRanges}}">
@@ -576,7 +576,7 @@
 
                     this.set("hasChanges", false);
                 },
-                clearSetup: function () {
+                resetSetup: function () {
                     this.lists.forEach(function (list) {
                         list.setup = list.defaultsetup || null;
                     });
