--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -102,7 +102,8 @@
                 <button type="button" class="btn" on-click="saveSetup" disabled$="{{!hasChanges}}">Save</button>
                 <button type="button" class="btn" on-click="resetSetup">Reset</button>
             </div>
-            <div class="editor-form-section">
+            <!-- Hiding the media screen buttons till we support multiple break points on the juicy-tile-list/grid/table level -->
+            <div class="editor-form-section" style="display: none;">
                 <template is="dom-repeat" items="{{mediaScreenRanges}}">
                     <button type="button" class$="{{getRadioButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" disabled$="{{!selectedList}}">{{item.name}}</button>
                 </template>
